Project

General

Profile

Actions

Bug #49552

closed

notifications: setting "persistent=false" creates a persistent topic

Added by Yuval Lifshitz about 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Development
Tags:
notification
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

to reproduce call:

aws --endpoint-url http://localhost:8000 sns create-topic --name=cowtopic --attributes='{"push-endpoint": "kafka://10.8.130.218:9092", "persistent": "false"}'

the topic will be created as a persistent topic. only omitting the "persistent" parameter create a non-persistent topic


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #50157: pacific: notifications: setting "persistent=false" creates a persistent topicResolvedsinguliere _Actions
Actions #1

Updated by Matt Benjamin about 3 years ago

  • Pull request ID set to 39782
Actions #2

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Yuval Lifshitz about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50157: pacific: notifications: setting "persistent=false" creates a persistent topic added
Actions #5

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF