rgw/notification: fixing the "persistent=false" flag

when setting "persistent=false" a non persistent
topic should be created

Fixes: https://tracker.ceph.com/issues/49552

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>